--- a/language detection.ipynb
+++ b/language detection.ipynb
@@ -197,7 +197,7 @@
         "file_paths = glob.glob('/content/Devanagari/Devanagari/*')\n",
         "X = []\n",
         "y = []\n",
-        "print(file_paths)"
+        "#print(file_paths)"
       ],
       "execution_count": null,
       "outputs": [
